# edareport

./: .coverage  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: benchmark.md
examples/: smoke_test.html  titanic_report.html  titanic_synthetic.csv
src/edareport/: __init__.py  _api.py  _types.py
src/edareport/plots/: __init__.py  bivariate.py  univariate.py
src/edareport/profiler/: __init__.py  core.py
src/edareport/renderers/: __init__.py  html.py
tests/: conftest.py
tests/integration/: test_generate_report.py
tests/unit/: test_api.py  test_benchmark.py  test_datasets.py  test_plots.py  test_profiler.py
