[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edafast"
version = "0.1.0"
description = "EDA report paling cepat & ringan di Python — insight dalam detik, bukan menit."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "LanceWRG", email = "your@email.com" }]
keywords = ["eda", "exploratory-data-analysis", "pandas", "report", "profiling", "plotly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
requires-python = ">=3.10"

# Core deps — sengaja minimal sesuai non-negotiable target
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.10",
    "plotly>=5.18",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Polars backend — optional, unlock 5-10x speedup
polars = [
    "polars>=0.20",
    "narwhals>=1.0",   # abstraction layer pandas/polars
]

# Notebook widget support
widget = [
    "ipywidgets>=8.0",
]

# Full install (all optional)
full = [
    "edafast[polars,widget]",
]

# Dev tools
dev = [
    "edafast[full]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "memory-profiler>=0.61",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "pre-commit>=3.7",
    "ydata-profiling>=4.18.1",
    "setuptools",
]

[project.urls]
Homepage = "https://github.com/lancewrg/edafast"
Repository = "https://github.com/lancewrg/edafast"
"Bug Tracker" = "https://github.com/lancewrg/edafast/issues"
Changelog = "https://github.com/lancewrg/edafast/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatchling build — src-layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/edareport"]

# ---------------------------------------------------------------------------
# uv — pin workspace settings (untuk contributor)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "edafast[dev]",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (pengganti black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
]
ignore = ["E501"]  # line length dihandle formatter

[tool.ruff.lint.isort]
known-first-party = ["edareport"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — strict typing
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["plotly.*", "scipy.*", "memory_profiler.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=edareport",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",  # fase awal — naikkan bertahap: 20 → 40 → 60 → 85
    "-v",
]
markers = [
    "slow: benchmark/integration tests (deselect with -m 'not slow')",
    "benchmark: performance tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/edareport"]
omit = ["*/__init__.py", "*/py.typed"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
